@@ -3,6 +3,11 @@
 	* Magic.py (%pushd, %popd, %dirs): Fix dir stack - push *current*
 	directory, not the target directory.
 
+	* ipapi.py, Magic.py, iplib.py: Add ipapi.UsageError, a lighter weight
+	exception that won't print the tracebacks. Switched many magics to
+	raise them on error situations, also GetoptError is not printed
+	anymore.
+
 2007-09-07  Ville Vainio  <vivainio@gmail.com>
 
 	* iplib.py: do not auto-alias "dir", it screws up other dir auto
